# super-agent-party

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  README_FORK.md  README_ZH.md  agent.js  agent.md  agent.py  agent_comfyui_endpoints.md  codex_add-agent-creator-2025-08-07.md  codex_agent-cli-2025-08-08.md  codex_agent-creator-2025-08-07.md  codex_agent-plugin-update-2025-08-08.md  codex_agentCreator-20250807.md  codex_avatar3d-2025-08-07.md  codex_comfyui-doc-2025-08-08.md  codex_comfyui-endpoints-2025-02-14.md  codex_init-tauri-react-2025-08-07.md  codex_init-tauri-react-2025-08-08.md  codex_mcp-backoff-2025-08-08.md  codex_mcp-docs-2025-08-08.md  codex_orchestrator-2025-08-07.md  codex_orchestrator-ui-2025-08-07.md  codex_plugin-registry-2025-08-08.md  codex_python-env-check-2025-08-07.md  codex_quantum_scheduler-2025-08-07.md  codex_repo-review-2025-08-08.md  codex_schedule-2025-08-08.md  codex_server-imports-2025-08-07.md  codex_server-refactor-2025-08-07.md  codex_startbackend-2025-08-07.md  codex_startbackend-2025-08-08.md  codex_tool-registry-2025-08-07.md  codex_tools-2025-08-07.md  codex_transform-agent-system-20250807.md  codex_translate-comments-2025-08-07.md  codex_update-app-2025-08-07.md  (+8 more)
backend/: __init__.py  __main__.py
config/: settings_template.json
doc/: api.md  i18n.md  install_config.md  tools.md
plugins/: add.py  echo.py
py/: __init__.py  accweatherAPI.py  agent_cli.py  agent_tool.py  custom_http.py  (+8 more)
src-tauri/: Cargo.toml
src-tauri/src/: http.rs  main.rs
src-tauri/src/tools/: mod.rs  shell.rs  web_fetch.rs
(+55 files in other folders)
