[package]
name = "super-agent-party"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4", features = ["cors"] }
tauri = { version = "1", features = ["api-all"] }
